# niffler-py-st3

./: docker-compose.yml  index.html
niffler-e-2-e-tests-python/: .env.example  .gitignore  README.md  conftest.py  marks.py  pyproject.toml
niffler-e-2-e-tests-python/api/: api_methods.py
niffler-e-2-e-tests-python/clients/: kafka_client.py  oauth_client.py  spends_client.py
niffler-e-2-e-tests-python/databases/: spend_db.py  userdata_db.py
niffler-e-2-e-tests-python/fixtures/: auth_fixtures.py  client_fixtures.py  kafka_fixtures.py  pages_fixtures.py  soap_fixtures.py
niffler-e-2-e-tests-python/models/: category.py  config.py  enums.py  spend.py  user.py
niffler-e-2-e-tests-python/pages/: auth_page.py  base_page.py  profile_page.py  registration_page.py  spending_page.py
niffler-e-2-e-tests-python/resources/templates/: http-colored-response.ftl
niffler-e-2-e-tests-python/templates/: read_templates.py
niffler-e-2-e-tests-python/templates/xsd/: envelope.xsd  userResponse.xsd
niffler-e-2-e-tests-python/tests/: conftest.py  test_auth.py  test_categories.py  test_logout.py  test_profile.py  test_registration.py  test_spending.py
niffler-e-2-e-tests-python/tests/api/: test_categories_api.py  test_spends_api.py
niffler-e-2-e-tests-python/tests/kafka/: test_kafka.py
niffler-e-2-e-tests-python/tests/soap/: test_soap.py
niffler-e-2-e-tests-python/tests/ui/: test_auth.py  test_categories.py  test_logout.py  test_profile.py  (+2 more)
niffler-e-2-e-tests-python/utils/: allure_helpers.py  api_assertions.py  datetime_helper.py  sessions.py  soap_parser.py  waiters.py
(+900 files in other folders)
