[project]
name = "niffler-e2e-tests"
version = "0.1.0"
description = "End-to-end tests for Niffler app"
authors = [
    {name = "Kirill Ryabtsev"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright (>=1.56.0,<2.0.0)",
    "pytest (>=7.0.0,<9.0.0)",
    "pytest-playwright (>=0.7.1,<0.8.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "faker (>=38.0.0,<39.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "pydantic (>=2.12.4,<3.0.0)",
    "allure-pytest (>=2.15.2,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pkce (>=1.0.3,<2.0.0)",
    "curlify (>=3.0.0,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "confluent-kafka (>=2.13.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
